# AIDA

./: .gitignore  README.md  pyproject.toml
notebooks/: minimal_aida_usage.ipynb
src/aida/: __init__.py  agent_loop.py  agent_prompts.json  aida.py  multistep_agent.py  multistep_agent_tools.json  multistep_insight_agent.py  progress.py  smolagents_context.py  smolagents_models.py  smolagents_prompts.py  smolagents_tools.py  smolagents_trace.py  smolagents_utils.py
tests/: test_aida.py
